Initial fix for class rename

--- a/css/v3/naat-min.v3.css
+++ b/css/v3/naat-min.v3.css
@@ -1,246 +1,267 @@
-.visual-refresh {
-  .appMount__51fd7 {
-    background: transparent;
-    background-image: var(--theme-background-image);
-    background-size: cover;
-  }
+._51fd70792ee2e563-appMount {
+  background: transparent;
+  background-image: var(--theme-background-image);
+  background-size: cover;
+}
 
-  .app__160d8 {
-    background: transparent;
-  }
+._160d8e55254637e5-app {
+  background: transparent;
+}
 
-  .bg__960e4 {
-    background: var(--theme-transparency);
-  }
+._960e4207cea8323e-bg {
+  background: var(--theme-transparency);
+}
 
-  .wrapper_ef3116 {
-    background: transparent;
-  }
+.ef3116c2da186559-wrapper {
+  background: transparent;
+}
 
-  .panels__5e434 {
-    background: var(--message-box-transparency);
-    backdrop-filter: blur(5px);
-  }
+._5e434347c823b592-panels {
+  background: var(--message-box-transparency);
+  backdrop-filter: blur(5px);
+}
 
-  .sidebar_c48ade:after {
-    background: transparent;
-  }
+.sidebar_c48ade:after {
+  background: transparent;
+}
 
-  .container__2637a {
-    background: transparent;
-  }
+._2637a2609f343032-container {
+  background: transparent;
+}
 
-  .chat_f75fb0 {
-    background: transparent;
-  }
+.f75fb00fb7356cbe-chat {
+  background: transparent;
+}
 
-  .chatContent_f75fb0 {
-    background: transparent;
-  }
+.f75fb00fb7356cbe-chatContent {
+  background: transparent;
+}
 
-  .themed__9293f {
-    background: transparent;
-  }
+._9293f6b2fc12398a-themed {
+  background: transparent;
+}
 
-  .container_c8ffbb {
-    background: transparent;
-  }
+.c8ffbb79449f399c-container {
+  background: transparent;
+}
 
-  .members_c8ffbb {
-    background: transparent;
-  }
+.c8ffbb79449f399c-members {
+  background: transparent;
+}
 
-  .channelTextArea_f75fb0 {
-    background: var(--message-box-transparency);
-  }
+.f75fb00fb7356cbe-channelTextArea {
+  background: var(--message-box-transparency);
+}
 
-  .themedBackground__74017 {
-    background: transparent;
-  }
+._740174f3d6a2c8fe-themedBackground {
+  background: transparent;
+}
 
-  .privateChannels__35e86 {
-    background: transparent;
-  }
+.privateChannels__35e86 {
+  background: transparent;
+}
 
-  .scroller__99e7c {
-    background: transparent;
-  }
+._99e7cad8d4c55236-scroller {
+  background: transparent;
+}
 
-  .children__9293f:after {
-    background: transparent;
-  }
+._9293f6b2fc12398a-children:after {
+  background: transparent;
+}
 
-  .wrapper__6e9f8 .childWrapper__6e9f8.childWrapperNoHoverBg__6e9f8 svg {
-    display: none;
-  }
+._6e9f8dce4cc18de3-wrapper
+  ._6e9f8dce4cc18de3-childWrapper._6e9f8dce4cc18de3-childWrapperNoHoverBg
+  svg {
+  display: none;
+}
 
-  .listItemWrapper__91816
-    .wrapper_cc5dd2
-    .wrapper__6e9f8
-    .childWrapper__6e9f8.childWrapperNoHoverBg__6e9f8 {
-    background-image: var(--home-icon-image);
-    background-size: var(--home-icon-image-zoom);
-    background-position: var(--home-icon-image-position);
-    background-repeat: no-repeat;
-  }
+._918165dab2b1e10b-listItemWrapper
+  .cc5dd25190031396-wrapper
+  ._6e9f8dce4cc18de3-wrapper
+  ._6e9f8dce4cc18de3-childWrapper._6e9f8dce4cc18de3-childWrapperNoHoverBg {
+  background-image: var(--home-icon-image);
+  background-size: var(--home-icon-image-zoom);
+  background-position: var(--home-icon-image-position);
+  background-repeat: no-repeat;
+}
 
-  .tutorialContainer__1f388
-    .wrapper_cc5dd2
-    .wrapper__6e9f8
-    .childWrapper__6e9f8.childWrapperNoHoverBg__6e9f8 {
-    background-color: transparent;
-  }
+._1f388bcaa446c0c8-tutorialContainer
+  .cc5dd25190031396-wrapper
+  ._6e9f8dce4cc18de3-wrapper
+  ._6e9f8dce4cc18de3-childWrapper._6e9f8dce4cc18de3-childWrapperNoHoverBg {
+  background-color: transparent;
+}
 
-  .tabBody__133bf {
-    background: transparent;
-  }
+._133bf5eea8e33a34-tabBody {
+  background: transparent;
+}
 
-  .container__133bf {
-    background: transparent;
-  }
+._133bf5eea8e33a34-container {
+  background: transparent;
+}
 
-  .member_c8ffbb {
-    background-color: transparent;
-  }
+.c8ffbb79449f399c-member {
+  background-color: transparent;
+}
 
-  .nowPlayingColumn__133bf {
-    background-color: transparent;
-  }
+._133bf5eea8e33a34-nowPlayingColumn {
+  background-color: transparent;
+}
 
-  .container__7d20c {
-    background-color: transparent;
-  }
+._7d20cf18f8a2784c-container {
+  background-color: transparent;
+}
 
-  .wrapper_d852db {
-    background: transparent;
-  }
+.d852db00c0588eb9-wrapper {
+  background: transparent;
+}
 
-  .wrapper_fc8177 {
-    background: transparent;
-  }
+.fc817765600a960a-wrapper {
+  background: transparent;
+}
 
-  .standardSidebarView__23e6b {
-    background: transparent;
-  }
+._23e6b439306f125a-standardSidebarView {
+  background: transparent;
+}
 
-  .sidebarRegionScroller__23e6b {
-    background: transparent;
-  }
+._23e6b439306f125a-sidebarRegionScroller {
+  background: transparent;
+}
 
-  .layer__960e4 {
-    background: transparent;
-  }
+._960e4207cea8323e-layer {
+  background: transparent;
+}
 
-  .contentRegion__23e6b {
-    background: transparent;
-  }
+._23e6b439306f125a-contentRegion {
+  background: transparent;
+}
 
-  .contentRegionScroller__23e6b {
-    background-color: transparent;
-  }
+._23e6b439306f125a-contentRegionScroller {
+  background-color: transparent;
+}
 
-  .channelAttachmentArea_b77158 {
-    background-color: transparent;
-  }
+.b77158512e0ab116-channelAttachmentArea {
+  background-color: transparent;
+}
 
-  .upload_aa605f {
-    background-color: transparent;
-  }
+.aa605f19898fe32e-upload {
+  background-color: transparent;
+}
 
-  .searchBar__5ec2f {
-    background-color: transparent;
-    backdrop-filter: blur(5px);
-  }
+._5ec2fb8b5de26b21-searchBar {
+  background-color: transparent;
+  backdrop-filter: blur(5px);
+}
 
-  .itemCard__7e549.wrapper__00943.outer_bf1984.padded_bf1984.interactive_bf1984 {
-    background-color: transparent;
-    backdrop-filter: blur(5px);
-  }
+._7e549558f336cddb-itemCard._00943886e1cf89d1-wrapper.bf1984a18b3ec6f0-outer.bf1984a18b3ec6f0-padded.bf1984a18b3ec6f0-interactive {
+  background-color: transparent;
+  backdrop-filter: blur(5px);
+}
 
-  .embedFull__623de {
-    background-color: transparent !important;
-    backdrop-filter: blur(5px);
-  }
+._623de82e76ad7f82-embedFull {
+  background-color: transparent !important;
+  backdrop-filter: blur(5px);
+}
 
-  .footer__4d95d {
-    background: transparent;
-    backdrop-filter: blur(5px);
-  }
+._4d95d73152192cf9-footer {
+  background: transparent;
+  backdrop-filter: blur(5px);
+}
 
-  .textContainer__4d95d {
-    backdrop-filter: blur(15px) !important;
-  }
+._4d95d73152192cf9-textContainer {
+  background-color: transparent;
+  backdrop-filter: blur(15px) !important;
+}
 
-  .container__0f2e8 {
-    background-color: transparent !important;
-    backdrop-filter: blur(5px);
-  }
+._4d95d73152192cf9-codeView {
+  background-color: transparent;
+}
 
-  .panel__5dec7 {
-    background-color: transparent !important;
-  }
+._0f2e83213c878a13-container {
+  background-color: transparent !important;
+  backdrop-filter: blur(5px);
+}
 
-  .scroller__28a87 {
-    background-color: transparent;
-  }
+._5dec784a68542d60-panel {
+  background-color: transparent !important;
+}
 
-  .root_bfe55a {
-    background: transparent;
-  }
+.scroller__28a87 {
+  background-color: transparent;
+}
 
-  .wrapper_cb9592 {
-    background: transparent;
-  }
+.bfe55a0aaaf62375-root {
+  background: transparent;
+}
 
-  .callContainer_cb9592 {
-    background: transparent;
-  }
+.cb9592ad77576717-wrapper {
+  background: transparent;
+}
 
-  .resizeHandle__01ae2 {
-    background: transparent;
-  }
+.cb9592ad77576717-callContainer {
+  background: transparent;
+}
 
-  .container__01ae2 {
-    background: transparent;
-    backdrop-filter: blur(5px);
-  }
+._01ae244280823725-resizeHandle {
+  background: transparent;
+}
 
-  .chatLayerWrapper__01ae2 {
-    background: transparent;
-  }
+._01ae244280823725-container {
+  background: transparent;
+  backdrop-filter: blur(5px);
+}
 
-  .channelChatWrapper_cb9592 {
-    background: transparent;
-  }
+._01ae244280823725-chatLayerWrapper {
+  background: transparent;
+}
 
-  .container_f369db {
-    background: transparent;
-  }
+.cb9592ad77576717-channelChatWrapper {
+  background: transparent;
+}
 
-  .mainCard_f369db {
-    background: transparent;
-    backdrop-filter: blur(5px);
-  }
+.f369dba7416c67f0-container {
+  background: transparent;
+}
 
-  .container_faa96b:hover {
-    background: transparent;
-    backdrop-filter: blur(15px);
-  }
+.f369dba7416c67f0-mainCard {
+  background: transparent;
+  backdrop-filter: blur(5px);
+}
 
-  .membersWrap_c8ffbb {
-    background-color: transparent;
-  }
+.faa96b2163f6a142-container:hover {
+  background: transparent;
+  backdrop-filter: blur(15px);
+}
 
-  .privateChannels_e6b769 {
-    background: none;
-  }
+.c8ffbb79449f399c-membersWrap {
+  background-color: transparent;
+}
 
-  .chatGradient__36d07 {
-    background: none;
-  }
+.e6b7699ce8339e1c-privateChannels {
+  background: none;
+}
 
-  .chatTypingGradientAtBottom__36d07,
-  .chatTypingGradientNotAtBottom__36d07 {
-    background: none;
-  }
+.chatGradient__36d07 {
+  background: none;
+}
+
+.chatTypingGradientAtBottom__36d07,
+.chatTypingGradientNotAtBottom__36d07 {
+  background: none;
+}
+
+._9293f6b2fc12398a-themed {
+  background: transparent !important;
+}
+
+._5e434347c823b592-sidebar:after {
+  background: transparent;
+}
+
+._36d072eab2b2e737-chatGradient {
+  background: transparent;
+}
+
+#guild-list-unread-dms .ed9a5f50013e19ac-pill {
+  display: none;
 }
