More small fixes

--- a/css/v3/naat-min.v3.css
+++ b/css/v3/naat-min.v3.css
@@ -265,3 +265,15 @@
 #guild-list-unread-dms .ed9a5f50013e19ac-pill {
   display: none;
 }
+
+.e29cd7b93c4f1266-titleContainer {
+  background-color: transparent;
+}
+
+.c6bf1b7af480dfda-header {
+  background-color: transparent;
+}
+
+._535437b3d3b11fd1-scroller {
+  background-color: transparent;
+}
