More tiny fixes

--- a/css/v3/naat.v3.css
+++ b/css/v3/naat.v3.css
@@ -493,3 +493,11 @@
 ._535437b3d3b11fd1-scroller {
   background-color: transparent;
 }
+
+._36d072eab2b2e737-chatTypingGradientNotAtBottom {
+  background: transparent;
+}
+
+._36d072eab2b2e737-chatTypingGradientAtBottom {
+  background: transparent;
+}
