Use more specific class name

--- a/css/v3/naat.v3.css
+++ b/css/v3/naat.v3.css
@@ -161,7 +161,7 @@
   justify-content: center;
 }
 
-.dbd2630aec71879b-stack {
+.ef3116c2da186559-itemsContainer .dbd2630aec71879b-stack {
   display: flex !important;
   flex-direction: column !important;
   flex-flow: row wrap !important;
